--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,157 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap");
+*,
+*::before,
+*::after {
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  font-family: "Poppins", sans-serif;
+  background-color: #f1f5f8;
+}
+
+.container h1 {
+  font-weight: bold;
+  position: relative;
+  font-size: 32px;
+  text-align: center;
+  padding-top: 2.5rem;
+}
+
+.container h1::before {
+  content: "";
+  width: 155px;
+  height: 5px;
+  border-radius: 6px;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: -6px;
+  background-color: orangered;
+}
+
+.flex {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  list-style-type: none;
+  margin: 20px auto;
+}
+
+.flex li {
+  padding: 10px 20px;
+  cursor: pointer;
+  margin: 0 5px;
+  color: orangered;
+  border-radius: 6px;
+  font-size: 14px;
+  font-weight: 500;
+  transition: 0.3s ease;
+}
+
+.flex li:hover {
+  background-color: orangered;
+  color: #fff;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: 1fr;
+  justify-content: space-between;
+  grid-gap: 15px;
+  max-width: 1300px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+/* Card Component */
+.card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 350px;
+  width: 80%;
+  max-width: 480px;
+  margin: 10px auto 20px auto;
+  overflow: hidden;
+}
+
+.card img {
+  height: 200px;
+  width: 100%;
+  object-fit: cover;
+  border-radius: 6px;
+  border: 3px solid orangered;
+}
+
+.top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 10px 0;
+  padding: 10px 0;
+  border-bottom: 1px dotted rgba(53, 51, 51, 0.4);
+}
+
+.top h2 {
+  font-size: 18px;
+}
+
+.top span {
+  color: orangered;
+  font-size: 16px;
+}
+
+.card p {
+  opacity: 0.8;
+  font-size: 14px;
+}
+
+/* Card media query */
+@media screen and (min-width: 980px) {
+  .grid {
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    max-width: 1100px;
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .card {
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: space-between;
+    width: 100%;
+    height: 150px;
+  }
+
+  .card img {
+    display: block;
+    height: 100%;
+    width: 150px;
+  }
+
+  .description {
+    margin-left: 20px;
+  }
+  .top {
+    margin-top: 0;
+  }
+
+  .top {
+    padding-top: 0;
+  }
+
+  .flex {
+    margin: 20px auto 35px auto;
+  }
+}
+
+/* Active state test */
+.active {
+  background-color: orangered;
+  color: #fff !important;
 }
